--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,8 @@
 #root {
   /* max-width: 1280px; */
   margin: 0 auto;
-  /* padding: 2rem; */
+  /* border: 5px solid black; */
+  /* width: 100%; */
+  /* padding: 2rem 0; */
   /* text-align: center; */
 }
