--- a/client/src/Components/DropDown/DropDown.module.css
+++ b/client/src/Components/DropDown/DropDown.module.css
@@ -1,9 +1,12 @@
 .input {
-  padding: 5px 10px;
+  padding: 0px 5px;
   height: 50px;
-  background-color: #6b7280;
-  border: none;
-  font-size: 20px;
+  width: 257px;
+  background-color: white;
+  border: 2px solid black;
+  color: black;
+  font-size: 15px;
+  font-family: "JetBrains Mono";
   border-radius: 12px;
   font-weight: 500;
 }
