--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,12 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "JetBrains Mono", Inter, system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  /* color: #213547; */
-  color: black;
+  color: #213547;
+  /* color: black; */
   background-color: #ffffff;
 
   font-synthesis: none;
@@ -26,6 +27,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
@@ -54,8 +56,8 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-/* 
-@media (prefers-color-scheme: dark) {
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
@@ -66,5 +68,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
- */
+} */
