--- a/client/src/Components/Table/Table.module.css
+++ b/client/src/Components/Table/Table.module.css
@@ -60,3 +60,58 @@
   font-size: 15px;
   font-weight: 500;
 }
+.specialClass {
+  width: 1160px;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  margin-top: 15px;
+  text-align: center;
+}
+
+.specialClass {
+  position: relative;
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+  background-color: black;
+  border: none;
+
+  overflow: hidden;
+  outline: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s;
+}
+.specialClass:hover {
+  transform: scale(1.05);
+}
+.specialClass:before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -40%;
+  width: 200%;
+  height: 1000%;
+  background: rgba(255, 255, 255, 0.3);
+  transform: rotate(45deg);
+  transition: all 1s ease;
+}
+.specialClass:hover:before {
+  top: -50%;
+  left: 150%;
+  transition: all 1.5s ease;
+}
+.specialClass:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -75%;
+  width: 50px;
+  height: 200%;
+  background: rgba(255, 255, 255, 0.5);
+  transform: skewX(-20deg);
+  transition: left 0.5s ease;
+}
+.specialClass:hover:after {
+  left: 125%;
+}
